// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta css generated class name should have the correct id 1`] = `
.emotion-0 {
  color: blue;
}

.emotion-1 .emotion-0 {
  color: red;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`meta css generated class name should have the correct id 2`] = `
".css-rkssyf-cls1 {
  color: blue;
}

.css-l8wq5p-cls2 .css-rkssyf-cls1 {
  color: red;
}"
`;

exports[`meta css prop correctly adds the id 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
>
  Hello
</div>
`;

exports[`meta css prop correctly adds the id 2`] = `
.emotion-0 {
  display: grid;
}

<div
  className="emotion-0"
>
  Hello
</div>
`;

exports[`meta css prop correctly adds the id 3`] = `
.emotion-0 {
  display: grid;
}

.emotion-1 {
  display: block;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Hello
  </div>
</div>
`;

exports[`meta css prop correctly adds the id 4`] = `
".css-1r4dgyc-SFC {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1081927-ClsComp {
  display: grid;
}

.css-f4mi4-hoc {
  display: block;
}"
`;

exports[`meta manually use label property 1`] = `
.emotion-0 {
  color: blue;
}

<div
  className="emotion-0"
/>
`;

exports[`meta manually use label property 2`] = `
".css-1751w60-wow-cls1 {
  color: blue;
}"
`;

exports[`meta multiple classes with the same styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
</div>
`;
